--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
+    "html2canvas": "^1.4.1",
     "next": "13.4.7",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qrcode-logo": "^2.9.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
