--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
     "html2canvas": "^1.4.1",
