--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     ]
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.12",
+    "@types/papaparse": "^5.3.9",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
     "html2canvas": "^1.4.1",
     "next": "13.4.7",
+    "papaparse": "^5.4.1",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf-tailwind": "^2.1.0",
     "react-qrcode-logo": "^2.9.0",
     "tailwindcss": "^3.3.2"
   },
