update eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,9 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/no-floating-promises": "off",
-    "spaced-comment": "off"
+    "spaced-comment": "off",
+    "@typescript-eslint/promise-function-async": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-misused-promises": "off"
   }
 }
